# TheCL

./: .env.example  .gitignore  LICENSE  README.md  _headers  ai-voice.js  audio-visualizer.js  config.js  data.js  index.html  main.py  package-lock.json  package.json  parallax.js  particles.js  pyproject.toml  robots.txt  scripts.js  styles.css  tabs.js  vite.config.js  wave-effect.js
.github/workflows/: ci.yml  deploy-pages.yml
backend/: dependencies.py  main.py  pyproject.toml
backend/tests/: test_general_func.py
backend/utils/: _client.py  clone_voice.py  general_func.py  oss.py  tts_websocket_demo.py
docs/: log.md
src/: App.vue  style.css  works.js
