[project]
name = "thecl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "openai>=1.70.0",
    "oss2>=2.19.1",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]
